--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AdminItemUpdate"></activity>
+        <activity android:name=".AvailableRooms"></activity>
+        <activity
+            android:name=".ConferenceRoom"
+            android:parentActivityName=".Home" />
+        <activity android:name=".AdminItemUpdate" />
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home"
