--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AvailableRooms"></activity>
+        <activity android:name=".CarWash" android:parentActivityName=".Home"></activity>
+        <activity android:name=".AvailableRooms" />
         <activity
             android:name=".ConferenceRoom"
             android:parentActivityName=".Home" />
