--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.firebaseui:firebase-ui-database:4.1.0'
     androidTestImplementation 'androidx.test:runner:1.1.0'
