--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation'com.android.support:design:28.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
