--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     package="com.khan.serviceprovider">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +15,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AdminItemUpdate"></activity>
+        <activity android:name=".SignUpCompany"></activity>
+        <activity android:name=".SignUpChoice" />
+        <activity android:name=".Desclaimer" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".AdminItemUpdate" />
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home"
@@ -27,6 +40,33 @@
         </activity>
         <activity android:name=".SignUpActivity" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".AddressInput" />
+        <activity
+            android:name=".PickUpActivity"
+            android:parentActivityName=".Home" />
+        <activity
+            android:name=".DesksideManicures"
+            android:parentActivityName=".Home" />
+        <activity
+            android:name=".CleaningServicesActivity"
+            android:parentActivityName=".Home" />
+        <activity
+            android:name=".DryCleanActivity"
+            android:parentActivityName=".Home" />
+        <activity android:name=".AvailableRooms" />
+        <activity
+            android:name=".ConferenceRoom"
+            android:parentActivityName=".Home" />
+        <activity android:name=".CarWash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
 </manifest>
